@@ -1,3 +1,8 @@
+2009-05-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/40013
+	* g++.dg/ext/vla7.C: New test.
+
 2009-04-30  Janis Johnson  <janis187@us.ibm.com>
 
 	PR testsuite/39776
